--- a/language-learning-app/src/app/tab1/tab1.page.scss
+++ b/language-learning-app/src/app/tab1/tab1.page.scss
@@ -6311,7 +6311,7 @@ img.m-card-empty-link-arrow-img {
   @media (max-width: 600px) {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 36px;
     margin-bottom: 0;
   }
 }
